AM_LDFLAGS=-lpthread ${GCOV_LIB}

noinst_LIBRARIES=libkyotocabinet.a

libkyotocabinet_a_SOURCES= kccompare.cc \
		  kccompress.cc \
		  kcdb.cc \
		  kcfile.cc \
		  kchashdb.cc \
		  kcmap.cc \
		  kcplantdb.cc \
		  kcregex.cc \
		  kcthread.cc \
		  kcutil.cc \
		  kccommon.h \
		  kccompare.h \
		  kccompress.h \
		  kcdb.h \
		  kcfile.h \
		  kchashdb.h \
		  kcmap.h \
		  kcplantdb.h \
		  kcregex.h \
		  kcthread.h \
		  kcutil.h \
		  myconf.h
